# teste-comunicacao-modbus-tcp

./: LICENSE  README.md  pyproject.toml
src/: create_executable.py  default_setting.py  functions.py  main.py
